# dotFiles

./: .default-gems  .default-npm-packages  .editorconfig  .fdignore  .gitconfig  .gitignore  .gitmessage  .p10k.zsh  .ripgreprc  .secrets.example  .tmux.conf  .tool-versions  .vimrc  .zpreztorc  .zprofile  .zshenv  .zshrc  Brewfile  Brewfile.air  Brewfile.lock.json  Brewfile.pro  CLAUDE.md  DOT-AUDIT.md  FLATTEN-PLAN.md  LICENSE  Makefile  README.md  bootstrap.sh  botufile  botufile.toml  botuinit.sh  doctor  dot  install.sh  lefthook.yml  mise-settings.toml  mise.toml  render  starship-tmux.toml  starship.toml  (+13 more)
.claude/: CLAUDE.md  hookify.ccusage-limits.local.md  hookify.prompt-glyphs.local.md  hookify.sync-sh.local.md  settings.json
atuin/: config.toml
bat/: config
ccusage/: limits.example.json
cmux/: cmux.json  mirror
dot-claude/: CLAUDE.md  REFERENCE.md  settings.json  settings.local.json  statusline-command.sh
dotctl/: Cargo.toml  README.md
dotctl/src/: doctor.rs  git_data.rs  hook.rs  host.rs  macos_defaults.rs  main.rs  prompt.rs  prune.rs  render.rs  statusline.rs  subagent_statusline.rs  sync.rs  util.rs
dotctl/tests/: cli.rs  doctor_drift.rs  prompt_render.rs
gh/: config.yml  gh-mcp-auth-header  git-credential-op-claude
ghostty/: config
git/: ignore
git-hooks/: pre-commit
gnar-term/: gnar-term.json
helix/: languages.toml
home/: .chezmoi.yaml.tmpl  .chezmoiignore  dot_gitconfig.tmpl  dot_gitignore  dot_tool-versions  dot_zprofile.tmpl  dot_zshrc.tmpl  run_once_setup-fzf.sh.tmpl  run_once_setup-macos-defaults.sh.tmpl  run_onchange_install-packages.sh.tmpl
hooks/: claude_statusline.sh  claude_statusline.ts  config-change  format-on-save  git-signing.sh  git-signing.ts  lock-file-guard  mcp-guard  op-agent.sh  permission-request  policy-guard  precompact  session-end  session-start  stop  subagent-stop  trim-bash-output  user-prompt-submit
install/: 00-brew.sh  05-linux.sh  10-linux.sh  10-sheldon-bin.sh  15-dotctl.sh  20-mise.sh  20-sheldon.sh  30-mise.sh  30-symlinks.sh  40-sheldon-plugins.sh  40-symlinks.sh  45-ssh.sh  47-op-agent.sh  50-claude.sh  50-ghostty.sh  55-fzf.sh  60-claude.sh  60-gh.sh  65-git-maint.sh  70-gh.sh  70-lefthook.sh  80-git-maint.sh  80-health.sh  85-lefthook.sh  90-macos.sh  95-prune.sh  lib.sh
karabiner/: karabiner.json
lazygit/: config.yml
lib/: common.sh
mcp/: mcp
npm/: npmrc
nvim/: coc-settings.json  init.lua  init.vim  lazy-lock.json
ssh/: config  (+2 more)
(+165 files in other folders)
