[package]
name = "dotctl"
version = "0.1.0"
edition = "2021"
description = "Hot-path utility binary for alxjrvs/dotFiles — git-data + statusline + Claude Code hook dispatcher."
license = "MIT"
repository = "https://github.com/alxjrvs/dotFiles"

[[bin]]
name = "dotctl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
# regex: precompiled patterns for hook::policy_guard. Eliminates 3–4
# `grep -E` subprocess forks per Bash tool-use event (~15ms → ~1µs).
# Default features keep unicode handling — our patterns are ASCII but
# stripping unicode costs little binary size at the cohesion expense.
regex = "1"
# chrono: eliminates `/usr/bin/date` forks in hook::iso_utc_now and
# git_data::format_human_time. Default features keep tz support; the
# binary-size cost is dwarfed by the per-hook subprocess savings.
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
